--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 # Cấu hình giao diện editor
-N8N_EDITOR_BASE_URL=https://n8n-custom-trungthanh-8c31.onrender.com
+N8N_EDITOR_BASE_URL=https://n8n-final-trungthanh.onrender.com
 
 # Cấu hình địa chỉ và cổng của n8n
-N8N_HOST=n8n-custom-trungthanh-8c31.onrender.com
+N8N_HOST=n8n-final-trungthanh.onrender.com
 N8N_PORT=5678
 N8N_PROTOCOL=https
 
